--- a/action.yml
+++ b/action.yml
@@ -5,15 +5,11 @@ inputs:
     description: 'Who to greet'
     required: true
     default: 'World'
-  image:
-    description: 'Docker image'
-    required: true
-    default: 'alpine'
 outputs:
   time: # id of output
     description: 'The time we greeted you'
 runs:
   using: 'docker'
-  image: ${{ inputs.image }}
+  image: 'alpine'
   args:
     - echo ${{ inputs.who-to-greet }}
